# Vector

./: .gitignore  CMakeLists.txt  README.md
docs/: design.md
resources/app/: app.js  bridge.js  index.html  mock-data.js  styles.css
src/: main_win.cc
src/app/: vector_app.cc  vector_app.h  vector_client.cc  vector_client.h
src/bridge/: query_handler.cc  query_handler.h
src/core/: game_json.cc  game_json.h  launcher.cc  launcher.h  scan_all.cc  scan_all.h  scan_env.h  scan_env_win.cc  scan_epic.cc  scan_epic.h  scan_gog.cc  scan_gog.h  scan_steam.cc  scan_steam.h  store.cc  store.h  strings.h  types.h  vdf.cc  vdf.h
test/: test_scan.cc  test_vdf.cc
tools/: static-server.js
win/: vector.rc
